Bug 478117 - Can toggle panels despite being locked
Summary: Can toggle panels despite being locked
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.01.80
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-12-05 18:11 UTC by Nico
Modified: 2023-12-27 21:52 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Minimizing and opening Kate again shows all panels (79.17 KB, image/png)
2023-12-27 21:52 UTC, Nico
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nico 2023-12-05 18:11:09 UTC
SUMMARY
I am not sure what the intended behavior is, but the panel locking feature doesn't work consistently

STEPS TO REPRODUCE
1. Open Dolphin
2. Pressing F9 can toggle places panel
3. Unlock and lock panels again using menu → Show panels → (Un)lock panels
4. Try pressing F9 again

OBSERVED RESULT
Now it no longer works

EXPECTED RESULT
It should behave consistently

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.90.0
KDE Frameworks Version: 5.246.0
Qt Version: 6.6.0
Kernel Version: 6.2.0-37-generic (64-bit)
Graphics Platform: Wayland

ADDITIONAL INFORMATION

I also have a very weird bug on my host system (Arch Linux) which I cannot reproduce inside my VM.
When I minimize a Dolphin window and open it again, the places panel is always missing, which is really annoying.
Comment 1 Nico 2023-12-05 18:12:01 UTC
After doing the unlock and lock again, the entries in the “Show panels” menu are also grayed out
Comment 2 Akseli Lahtinen 2023-12-15 09:15:03 UTC
Can reproduce on Plasma 6. Seems the config is not loaded properly.
Comment 3 Bug Janitor Service 2023-12-15 09:33:09 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/676
Comment 4 Méven Car 2023-12-15 10:17:24 UTC
Git commit a5fb0524b575597a1e835f601e23bd2ceb9ce11b by Méven Car, on behalf of Akseli Lahtinen.
Committed on 15/12/2023 at 11:17.
Pushed by meven into branch 'master'.

Set dockAction enabled according to settings

Panels are unlocked even they're set locked in settings at start of the app.
This sets panels locked according to the setting.

M  +1    -1    src/dolphindockwidget.cpp

https://invent.kde.org/system/dolphin/-/commit/a5fb0524b575597a1e835f601e23bd2ceb9ce11b
Comment 5 Nico 2023-12-27 21:52:34 UTC
Created attachment 164493 [details]
Minimizing and opening Kate again shows all panels

Now after updating to Plasma 6 Beta 2 on my Archlinux Host it always shows all panels when minizing for example Dolphin or Kate and opening it again