Set dockAction enabled according to settings

Panels are unlocked even they're set locked in settings at start of the app.
This sets panels locked according to the setting.

BUG:478117